@@ -56,6 +56,7 @@ audio/x-tta
 audio/x-wav
 audio/x-wavpack
 audio/x-vorbis
+audio/x-vorbis+ogg
 audio/x-xm
 image/vnd.rn-realpix
 image/x-pict
